Update archetypes / data page

--- a/src/docs/archetypes.mdx
+++ b/src/docs/archetypes.mdx
@@ -10,14 +10,22 @@ menu:
 
 # {title}
 
-`tl;dr:` The `_data.yml` files in this theme are very important. They 
-control a lot about how the files inside will be generated.
+<comp.alert
+  type="info"
+  allowDismiss="false"
+  message="**`tl;dr:` The `_data.yml` files in this theme control a lot about generation.**" 
+/>
 
-In Lume, _archetypes_ are scripts that Lume runs which can create base 
-content for blog posts, content pages, photo galleries, or whatever other
+If you're familiar with Lume, you probably already know what's up; everything
+below is just reference to you (I try to keep the examples up to date with 
+what's live on this site).
+
+For those that are new to Lume, _archetypes_ are scripts that Lume runs which can 
+create base content for blog posts, content pages, photo galleries, or whatever other
 content you have. 
 
-In Cushy Text, this applies to three specific types of content:
+In Cushy Text, this applies to three specific types of content that the theme knows
+how to generate:
 
  - `blog` : A blog with a working tag system, feeds, archive, tag and 
     author pages. Supports multiple instances with independent tags.
