add note about markdown

--- a/src/docs/tag-wikis-tag-feeds.mdx
+++ b/src/docs/tag-wikis-tag-feeds.mdx
@@ -40,6 +40,8 @@ From this file, the theme knows what to print for the tag, and also
 that there's a relation to "updates", which it links as "Related"
 in the sidebar.
 
+BTW - you can use Markdown in the wiki summary.
+
 ## Tag-Specific RSS & JSON Feeds
 
 To enable tag "feeds", that tag must have a wiki associated with it. Once
