Tag wiki docs update

--- a/src/docs/tag-wikis-tag-feeds.mdx
+++ b/src/docs/tag-wikis-tag-feeds.mdx
@@ -51,13 +51,12 @@ feeds until I'm sure about the tag.
 
 I designed it this way so that I'm not inadvertently offering ephemeral
 feeds because I change my mind on a tag. If I make a tag, I might
-decide I don't want it in a week, or change the name. 
-
-But, if I make a tag and go through the chore of also creating the wiki, 
-where I have to make myself write out how I'm going to use the tag, I'm
-way more inclined to keep it and not annoy people by deleting feeds.
+decide I don't want it in a week, or change the name. But, if I make a tag 
+and go through the chore of also creating the wiki, where I have to make 
+myself write out how I'm going to use the tag, I'm way more inclined to keep 
+it and not annoy people by deleting or re-naming their feeds.
 
 This lets users create tag feeds for tags they care about, just by 
-creating a wiki entry for it.
-
-You are, of course, free to change that in the template if you wish.
+creating a wiki entry for it. You are, of course, free to change that in the 
+template code if you wish. I develop features for the site while using it, 
+so they tend to be centered around open-source use cases.
