--- a/src/docs/tag-wikis-tag-feeds.mdx
+++ b/src/docs/tag-wikis-tag-feeds.mdx
@@ -1,5 +1,5 @@
 ---
-title: How Do Tag Wikis &amp; Tag Feeds Work?
+title: How Do Tag Wikis And Tag Feeds Work?
 description: How to use the built-in tag wiki and tag feed features.
 metas:
   image: /docs/tag-wikis-tag-feeds/index.png
