Update archetypes doc

--- a/src/docs/archetypes.mdx
+++ b/src/docs/archetypes.mdx
@@ -27,13 +27,12 @@ content you have.
 In Cushy Text, this applies to three specific types of content that the theme knows
 how to generate:
 
- - `blog` : A blog with a working tag system, feeds, archive, tag and 
-    author pages. Supports multiple instances with independent tags.
+ - `blog` : A blog with a working tag system, feeds, tag wiki, tag feeds and 
+    archives. Supports multiple instances with independent tags.
 
  - `docs` : Like a blog, but sidebar is auto generated, no archive pages, 
-   tag pages, or author pages. Tags can be applied to help guide search, 
-   but are only used for taxonomy. Supports multiple instances with 
-   independent tags.
+   tag pages, or author pages. Shows content rating form by default. Meant
+   for technical articles.
 
  - `pages` : Full-page, sidebar-less MDX pages that aren't auto-linked, but
     can be tagged and are searchable. Meant for creating long-form content, 
@@ -110,6 +109,9 @@ a near release.
 
 The `pages` archetype is under construction and will depend on finishing 
 all of the components so that they can be made available as MDX elements.
+
+Right now, there's plenty of utility stuff, but no real page-building 
+stuff in the mix yet. That's coming up soon!
 
 ## Creation Scripts Included
 
