--- a/src/blog/quick-accessibility-update-0.0.1.mdx
+++ b/src/blog/quick-accessibility-update-0.0.1.mdx
@@ -27,10 +27,9 @@ metas:
 
 If you make web pages and haven't yet heard of [Sa11y](https://sa11y.netlify.app/), 
 I strongly suggest checking it out at your earliest opportunity. Special thanks to 
-Lume Community member [Pyrox](https://pyrox.dev/) for suggesting it.
-
-I had been bracing for a massive list of fixes that would be needed in order to 
-call CushyText accessible, but quite amazingly, _we're already doing pretty well!_.
+Lume Community member [Pyrox](https://pyrox.dev/) for suggesting it. I had been 
+bracing for a massive list of fixes that would be needed in order to call CushyText 
+accessible, but quite amazingly, _we're already doing pretty well!_.
 
 <img
   class="blog_image"
