title / alt text

--- a/src/blog/post-hog-static-sites.mdx
+++ b/src/blog/post-hog-static-sites.mdx
@@ -34,16 +34,18 @@ making new things for the public to use:
 
  - Develop blindly without collecting much meaningful usage data.
 
-I just can't accept analytics still being a ***Kobayashi Maru*** for us little people
-so I went looking at alternatives and wow, [PostHog](https://posthog.com) really stood
-out as being _primarily_ privacy respecting. In addition to that, it can record 
-sessions, roll out canary releases, do your split tests and way more.
+Another option, please?
 
 <img
   class="blog_image"
   src="/uploads/blog/post-hog-static-sites-regular.jpg" 
-  alt="TODO: Description" 
-  title="TODO: Title" />
+  alt="Hedge hogs looking at data" 
+  title="Kind of a corny personification but CHECK OUT THAT HAIR!" />
+
+I just can't accept analytics still being a ***Kobayashi Maru*** for us little people
+so I went looking at alternatives and wow, [PostHog](https://posthog.com) really stood
+out as being _primarily_ privacy respecting. In addition to that, it can record 
+sessions, roll out canary releases, do your split tests and way more.
 
 It's not just that it can do really amazing things, it's that ***it can do them without
 requiring you to implement a cookie banner.***
