PostHog doesn't really need a tag.

--- a/src/blog/post-hog-static-sites.mdx
+++ b/src/blog/post-hog-static-sites.mdx
@@ -8,8 +8,8 @@ menu:
   visible: true
   order: 0
 tags:
-  - posthog
   - opinion
+  - static-sites
 metas:
   lang: en
   description: A review of PostHog after a month and starting from scratch on a static site. Uncompensated. 
