--- a/src/blog/post-hog-static-sites.mdx
+++ b/src/blog/post-hog-static-sites.mdx
@@ -1,5 +1,5 @@
 ---
-title: PostHog Speaks My Language For Analytics
+title: PostHog Speaks My Language For Static Site Analytics
 description: "I tried PostHog on a static JAM setup for a month and loved it. Uncompensated."
 date: 2025-03-25
 author: Tim Post
