--- a/src/docs/admin.mdx
+++ b/src/docs/admin.mdx
@@ -13,7 +13,8 @@ metas:
 # "Fake" Admin Area
 
 This is a page left on draft so it never gets rendered and served by
-the server. It only renders when you're using `lume -s` locally. 
+the server. It only renders when you're using `lume -s` locally, with
+`LUME_DRAFTS` set in the environment.
 
 Use the `feedbackAdmin` component to view and manage feedback, like
 this:
