It's real; it's just local!

--- a/src/docs/admin.mdx
+++ b/src/docs/admin.mdx
@@ -1,5 +1,5 @@
 ---
-title: "'Admin' Area"
+title: "Local 'Admin' Area"
 description: "Intentionally Left Set To Draft"
 draft: true
 menu:
@@ -10,7 +10,7 @@ metas:
   image: /docs/index.png
 ---
 
-# "Fake" Admin Area
+# Local Admin Area
 
 This is a page left on draft so it never gets rendered and served by
 the server. It only renders when you're using `lume -s` locally, with
