content: fix typo

--- a/src/blog/post-hog-static-sites.mdx
+++ b/src/blog/post-hog-static-sites.mdx
@@ -138,7 +138,7 @@ you succeeding, not just narrating success through metrics to their investors.
 But, I think it's laid out _for_ learning about as well as any type of application
 of its kind can be.
 
-## It Won't Victimize You For succeeding
+## It Won't Victimize You For Succeeding
 
 This is, I think, probably the most important feature. You're not going to wake
 up to a non-functional analytics platform just because you got lucky enough 
