content update (links to dev)

--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -205,6 +205,9 @@ loading additional CSS and JS on top of the framework only when they're
 used. Alerts, Content Rating, and more coming like tabs, carousels and other
 things content-heavy sites frequently need.
 
+If you're curious and a little adventurous, you can have a look at [our component testing page](/dev/),
+which also shows most of the Infima utility components and helpers.
+
 <h2 id="plugins">Includes A Ton Of Pre-Configured Plugins!</h2>
 
 Everything from automatic OG image generation to broken link detection and plenty of 
