--- a/src/features/index.mdx
+++ b/src/features/index.mdx
@@ -31,8 +31,7 @@ admin plugin to view and delete feedback.
 Things are working fine with DenoKV; we're also looking to implement a way to use Github Issues
 as well as Discord to receive submissions.  
 
-Check out the [blog update about additional features](/blog/interactive-feature-plans/) 
-that are likely to also ship with the early release candidates!
+The [content rating plugin])(/docs/content-rating/) (aka anonymous feedback) is live right now. 
 
 <h2 id="blog">A Fully-Featured, Interactive & SEO Optimized Blog</h2>
 
