docs: updates about middleware and plans for router code

--- a/src/docs/content-rating.mdx
+++ b/src/docs/content-rating.mdx
@@ -10,7 +10,8 @@ menu:
 
 # {title}
 
-The content rating component actually consists of two components:
+The content rating component is powered by [Lume 3 Router Middleware](/docs/middleware/) 
+and consists of two components:
 
  1. The front-end form & survey component: `comp.feedback()`, and, 
  
