--- a/src/docs/content-rating.mdx
+++ b/src/docs/content-rating.mdx
@@ -109,7 +109,7 @@ is set, which is also used by CushyDocs to control dev mode:
 ---
 title: Admin
 layout: layouts/page.vto
-type: pages
+draft: true
 menu:
   visible: true
   order: -1
